samples/_failures_safe/1761075722_a64c8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_464ebfb2.c: In function ‘main’:
./samples/SAFE/__tmp_464ebfb2.c:156:21: error: ‘matrix_t’ undeclared (first use in this function); did you mean ‘Matrix’?
  156 |                 if (matrix_t
      |                     ^~~~~~~~
      |                     Matrix
./samples/SAFE/__tmp_464ebfb2.c:156:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_464ebfb2.c:156:29: error: expected ‘)’ at end of input
  156 |                 if (matrix_t
      |                    ~        ^
      |                             )
./samples/SAFE/__tmp_464ebfb2.c:156:17: error: expected declaration or statement at end of input
  156 |                 if (matrix_t
      |                 ^~
./samples/SAFE/__tmp_464ebfb2.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_464ebfb2.c:156:17: error: expected declaration or statement at end of input
